# implicit-fn.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: statement-macro.rs
