[package]
name = "implicit-fn"
version = "0.1.0"
edition = "2024"
description = "A macro that adds support for implicit closures to Rust."
repository = "https://github.com/SabrinaJewson/implicit-fn.rs"
license = "MIT"
keywords = ["interpunct", "partial-application", "currying", "placeholder"]
categories = ["rust-patterns"]
rust-version = "1.85.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "visit-mut"] }
